# mosaik

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.bdfef34  Readme.md  main.cpp  notes.h
audio/: AlsaOut.cpp  AlsaOut.h  CMakeLists.txt
audio-midi/: AlsaOut.cpp  AlsaOut.h  AudioMidi.cpp  AudioMidi.h  CMakeLists.txt
cmake/: CPM.cmake
core/: Api.h  CMakeLists.txt  Core.cpp  Core.h  DataModel.cpp  DataModel.h  FadeParameterSanitizer.cpp  FadeParameterSanitizer.h  Mosaik.cpp  Mosaik.h  ParameterDescriptor.h  StepWizard.cpp  StepWizard.h  Types.h
core/api/: Interface.cpp  Interface.h
core/tests/: CMakeLists.txt  CoreTests.cpp  bd.flac
dockerized/: CMakeLists.txt  Dockerfile  Dockerfile-arm  Dockerfile-x86
dsp/: AudioKernel.h  CMakeLists.txt  Channel.cpp  Channel.h  Dsp.cpp  Dsp.h  MidiEvent.h  Mosaik.cpp  Mosaik.h  PointerExchange.h  Reverb.cpp  Reverb.h  Tile.cpp  Tile.h  Types.h
dsp/api/control/: Api.cpp  Api.h  Interface.h
dsp/api/display/: Api.h  Interface.h
dsp/api/realtime/: Api.h  Interface.h
dsp/tools/: AudioFileDecoder.cpp  AudioFileDecoder.h  Tools.cpp  Tools.h
firmware/logic-analyzer/: full-recording.sal
firmware/mosaik-atmega32u4-firmware/: .gitignore  platformio.ini
firmware/mosaik-atmega32u4-firmware-v2/: platformio.ini
firmware/mosaik-atmega32u4-firmware-v2/src/: coos.h  main.cpp
firmware/mosaik-atmega32u4-firmware/src/: coos.cpp  main.cpp  readme.md
firmware/mosaik-stm32f072-firmware/: .cproject  .mxproject  .project  STM32F072RBTX_FLASH.ld  mosaik-stm32f072-firmware Debug.launch  mosaik-stm32f072-firmware.ioc
firmware/mosaik-stm32f072-firmware/Core/Inc/: main.h  stm32f0xx_it.h
firmware/mosaik-stm32f072-firmware/Core/Src/: btn_enc.c  btn_enc.h  coos.h  main.c  rgb_leds.c  rgb_leds.h  stm32f0xx_hal_msp.c  stm32f0xx_it.c
firmware/mosaik-stm32f072-firmware/Debug/: makefile  mosaik-stm32f072-firmware.elf  mosaik-stm32f072-firmware.list  mosaik-stm32f072-firmware.map  objects.list
firmware/mosaik-stm32f072-firmware/Debug/Core/Src/: btn_enc.d  btn_enc.su  coos.d  coos.su  main.d  main.su  rgb_leds.d  rgb_leds.su  stm32f0xx_hal_msp.su  stm32f0xx_it.su  subdir.mk
firmware/mosaik-stm32f072-firmware/Debug/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: subdir.mk
firmware/mosaik-stm32f072-firmware/Debug/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk
firmware/mosaik-stm32f072-firmware/Debug/USB_DEVICE/App/: subdir.mk
firmware/rgb-color-tester/src/: main.cpp
manual/: manual.md  parameter-table.ods  readme.md
midi/: Alsa.cpp  Alsa.h  AlsaIn.cpp  AlsaIn.h  CMakeLists.txt  Controller.cpp  Controller.h  Monitor.cpp  Monitor.h  Sync.cpp  Sync.h
r/: Cargo.toml
r/audio-io/: Cargo.toml
r/audio-io/src/: lib.rs
r/core/: Cargo.toml
r/core/src/: lib.rs  parameter_cache.rs  value.rs
r/dsp/src/: audio_kernel.rs  control.rs  display.rs  lib.rs  realtime.rs  transfer_ptr.rs
r/mosaik/: Cargo.toml
r/mosaik/src/: main.rs
r/touch-ui/: Cargo.toml
r/touch-ui/src/: lib.rs
tests/: MosaikTests.cpp
tools/: CMakeLists.txt  Expiration.cpp  Expiration.h  Format.cpp  Format.h  Math.h  ReactiveVar.cpp  ReactiveVar.h  SignalSlot.h  json.h
tools/tests/: CMakeLists.txt  ReactiveVarTests.cpp  SignalSlotTests.cpp
ui/: CMakeLists.txt  Controller.cpp  Controller.h  ParameterDescriptor.h  SharedState.cpp  SharedState.h  StepWizard.cpp  StepWizard.h  ToolboxDefinition.h  Types.h
ui/debug-midi-ui/: CMakeLists.txt  Window.cpp  Window.h
ui/midi-ui/: CMakeLists.txt  Controller.cpp  Controller.h  DebugUI.cpp  DebugUI.h  Erp.cpp  Erp.h  Interface.cpp  Interface.h  MidiEventDispatcher.cpp  MidiEventDispatcher.h  Types.h  Ui.cpp  Ui.h
ui/touch-ui/: Application.cpp  Application.h  CMakeLists.txt  Checkbox.cpp  Checkbox.h  Display.cpp  Display.h  FloatScaleButton.cpp  FloatScaleButton.h  Interface.h  LessToCss.cpp  LessToCss.h  LevelMeter.cpp  LevelMeter.h  StepButton.cpp  StepButton.h  Tile.cpp  Tile.h  Ui.cpp  Ui.h  Window.cpp  Window.h  styles.css  styles.less
ui/touch-ui/controls/: Checkbox.cpp  Checkbox.h  FloatScaleButton.cpp  FloatScaleButton.h  Label.cpp  Label.h  StepButton.cpp  StepButton.h
ui/touch-ui/mixer/: Channel.cpp  Channel.h  Mixer.cpp  Mixer.h
ui/touch-ui/sections/: LevelMeter.h  SectionWrapper.h
ui/touch-ui/sections/main/: Main.cpp  Main.h
ui/touch-ui/sections/mixer/: Channel.cpp  Channel.h  Mixer.cpp  Mixer.h
ui/touch-ui/sections/tiles/: LevelMeter.cpp  LevelMeter.h  Tile.cpp  Tile.h  Tiles.cpp  Tiles.h  WaveformThumb.cpp  WaveformThumb.h
ui/touch-ui/sections/toolboxes/: FileBrowser.cpp  FileBrowser.h  GenericToolbox.cpp  GenericToolbox.h  GlobalTools.cpp  GlobalTools.h  KnobGrid.cpp  KnobGrid.h  MainPlayground.cpp  MainPlayground.h  MinimizedToolbox.cpp  MinimizedToolbox.h  Playground.cpp  SoftButtonGrid.cpp  SoftButtonGrid.h  Steps.cpp  Steps.h  TileTools.cpp  TileTools.h  Toolbox.cpp  Toolbox.h  Toolboxes.cpp  Toolboxes.h  Waveform.cpp  Waveform.h
ui/touch-ui/tests/: CMakeLists.txt  ParameterDescriptionsTests.cpp
ui/touch-ui/tiles/: Tile.cpp  Tile.h  Tiles.cpp  Tiles.h  WaveformThumb.cpp
ui/touch-ui/toolbox/: GlobalTools.cpp  GlobalTools.h  KnobGrid.cpp  KnobGrid.h  Pattern.cpp  Pattern.h  Playground.cpp  Playground.h  SoftButtonGrid.cpp  SoftButtonGrid.h  Steps.cpp  TileTools.cpp  TileTools.h  Toolboxes.cpp  Toolboxes.h  Waveform.cpp  Waveform.h
ui/touch-ui/toolboxes/: CombinedGrid.cpp  CombinedGrid.h  GenericToolbox.h  KnobGrid.cpp  SoftButtonGrid.cpp  SoftButtonGrid.h  TileTools.cpp  TileTools.h  Toolbox.cpp  Toolbox.h  Toolboxes.cpp  Toolboxes.h  Waveform.cpp  Waveform.h
ui/touch-ui/tools/: WidgetTools.cpp  WidgetTools.h
