[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
dsp = { path = "../dsp" }
enum-as-inner = "0.6.0"
float-cmp = "0.9.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
signals2 = "0.3.3"
strum = "0.25.0"
strum_macros = "0.25.3"
